--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.17.0
+PySide6==6.8.2.1
+PySide6_Addons==6.8.2.1
+PySide6_Essentials==6.8.2.1
+shiboken6==6.8.2.1
